kubernetes/deployment.yaml
# kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-ban-hang-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-web
  template:
    metadata:
      labels:
        app: php-web
    spec:
      containers:
      - name: php-apache-container
        image: __IMAGE_PLACEHOLDER__
        ports:
        - containerPort: 80

      volumes:
      - name: mysql-init-script-volume
        configMap:
          name: mysql-init-script
