kubernetes/service.yaml
# kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-web-service
spec:
  selector:
    app: php-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
